# machtiani-commit-file-retrieval

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  utils.py
app/models/: requests.py  responses.py
app/routes/: add_repository.py  check_repo_lock.py  count_tokens_add_repository.py  count_tokens_fetch_and_checkout.py  count_tokens_generate_response.py  count_tokens_load.py  delete_store.py  fetch_and_checkout.py  file_edit.py  file_paths.py  get_file_paths.py  get_file_summary.py  get_project_info.py  health.py  infer_file.py  load.py  new_files.py  retrieve_file_contents.py  status_route.py  test_pull_access.py
app/services/: add_repository_service.py  check_repo_lock_service.py  count_tokens_service.py  delete_store_service.py  edit_file_service.py  fetch_and_checkout_service.py  generate_response_service.py  get_file_summary_service.py  get_project_info_service.py  load_service.py  new_files_service.py  status_service.py  test_pull_access_service.py
docs/: OpenAPI.json
lib/ai/: embeddings_model.py  llm_model.py
lib/edit/: edit.py
lib/indexer/: commit_indexer.py  file_summary_indexer.py
lib/search/: commit_embedding_matcher.py  file_embedding_matcher.py  file_localization.py
lib/utils/: enums.py  log_utils.py  utilities.py
lib/vcs/: git_commit_manager.py  (+3 more)
scripts/: cosine_similarity_match.py  cosine_similarity_match_commits.py  embedd_commits.py  embedd_text.py  git_commit_parser.py  git_commit_parser_up_to_depth.py  hello-query.py  langchain_usage.py
tests/: test_utilities.py
web/: index.html  server.py
(+7 files in other folders)
