[tool.poetry]
name = "businessmachine-work"
version = "0.1.0"
description = "Code retrieval."
authors = ["7db9a"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langchain-anthropic = "^0.1.23"
python-dotenv = "^1.0.0"

