[tool.poetry]
name = "businessmachine-work"
version = "0.1.0"
description = "Code retrieval."
authors = ["7db9a"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain = "^0.2.14"
langchain-openai = "^0.1.22"
langchain-anthropic = "^0.1.23"
python-dotenv = "^1.0.0"
numpy = "^1.26.0"
gitpython = "^3.1.43"
fastapi = "^0.103.0"
uvicorn = "^0.30.1"
pydantic = "^2.3.0"
flask = "^3.0.3"
flask-cors = "^5.0.0"
python-magic = "^0.4.27"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

